# gui_client

./: .dockerignore  .gitignore  .pre-commit-config.yaml.template  Dockerfile  README.md  Taskfile.yml  build_version  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
src/: game.py  main.py
src/application/: app.py
src/config/: settings.py
src/config/game/: connection.py  constants.py  hits.py  ip.py  person_type.py  persons.py  url_encode.py  urls.py
src/domain/constants/: consts.py
src/domain/constants/bots/: names.py  type.py
src/domain/constants/buffs/: name.py
src/domain/constants/location/: base.py
src/domain/constants/potion/: healing.py  name.py
src/domain/item/: ability.py  actions.py  base.py  elixir.py  name.py  potion.py  property.py  requirements.py  scroll.py  use.py
src/domain/pattern/chat/: compiled.py  pattern.py
src/domain/pattern/effect/: compiled.py  pattern.py
src/domain/pattern/fight/: compiled.py  pattern.py
src/domain/pattern/inv/: compiled.py  pattern.py
src/domain/pattern/location/: compiled.py  pattern.py
src/domain/pattern/login/: compiled.py  pattern.py
src/domain/pattern/person/: compiled.py  pattern.py
src/domain/person/: name.py
src/domain/value_object/: base.py  classes.py
src/domain/value_object/schemas/: __init__.py  data_schema.py
src/infrastructure/: connection.py
src/infrastructure/errors/: effect.py  exception.py  game.py  helpers.py  request.py
src/infrastructure/flet_comp/: root.py
src/infrastructure/flet_comp/component/: login.py  main.py  person.py  textfield.py
src/infrastructure/flet_comp/element/: login.py  main.py  person.py
src/infrastructure/request/: __init__.py  check_ip.py  nl.py  telegram.py
src/infrastructure/utils/: analitics.py  enums.py  person_files.py
src/use_cases/game/: base.py  buff.py  fight_asist.py  fight_assist.py  game.py
src/use_cases/game/fight/: __init__.py  config_fight.py  fight.py
src/use_cases/game/fight/settings/: fight_config_leader_mag.json  fight_config_leader_warrior.json  fight_config_mag.json  fight_config_mag_old.json  fight_config_slave.json  fight_config_solo.json  fight_config_solo_mag.json  fight_config_solo_warrior.json  fight_config_warrior.json  fight_config_warrior_old.json  hit_dict.json
src/use_cases/game/location/: base.py  graph.py  implementation_logic.py  main.py
src/use_cases/item/: base.py
src/use_cases/person/: base.py  parameter.py
src/use_cases/person/buff/: castle.py  config.py  constants.py  effects.py  group.py  responsibilities_chain.py
src/use_cases/person/inv/: base.py
src/use_cases/request/: base.py
