[tool.poetry]
name = "gui-client"
version = "0.1.0"
description = ""
authors = ["Anton Zimin <zimkaa87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.0"
tomli = "^2.0.1"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"
mypy = "^1.10.0"
pytest = "^8.2.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
addopts = "-vvv"
asyncio_mode="auto"
cache_dir = "/tmp/pytest_cache"
testpaths = [
    "tests",
]

[tool.ruff]
cache-dir = "/tmp/ruff_cache"
fix = true
line-length = 120
unsafe-fixes = true
exclude = [
    "alembic/",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",  # all docstrings issues
    "TRY401",  # exception logging
    "TCH003",  # Move standard library import {} into a type-checking block
    "S101",  # using assert
    "ANN101",  # self annotation
    "EXE002",  # executable
    # project specific
]
exclude = []

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = ["src"]
lines-after-imports = 2
force-single-line = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["ANN101", "S101", "S311"]
"logger/custom.py" = ["A003"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
cache_dir = "/tmp/mypy_cache"
disable_error_code = "import-untyped"
exclude = ["~/.pyenv/*", ".venv/", "alembic/"]
ignore_missing_imports = true
python_version = "3.11"
plugins = [
    "pydantic.mypy",
]
strict = false

[tool.pyright]
ignore = []
include = ["src"]
pythonVersion = "3.11"
reportInvalidTypeForm = "none"
